[workspace]
members = [
    "solana-client-gen",
    "common",
    "common/tests",
    "crank",
    "pool",
    "pool/client",
    "pool/schema",
    "pool/examples/simple",
    "registry",
    "registry/cli",
    "registry/client",
    "rewards",
    "rewards/cli",
    "rewards/client",
    "lockup",
    "lockup/cli",
    "lockup/client",
    "node",
    "node/json-rpc",
    "node/logging",
    "node/crank",
    "node/registry",
    "node/context",
    "node/dev",
    "lockup/tests/stake",
    "stake",
]
exclude = [
    "dex",
    "retbuf",
    "registry/program",
    "retbuf",
    "lockup/program",
    "lockup/tests/stake/program",
    "stake/program",
]
